--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,9 +3,12 @@ uvicorn==0.27.1
 python-multipart==0.0.9
 sqlalchemy==2.0.27
 pydantic==2.6.1
+pydantic-settings==2.1.0
 python-jose==3.3.0
 passlib==1.7.4
 bcrypt==4.1.2
 python-dotenv==1.0.1
 pytest==8.0.2
-httpx==0.26.0 
+httpx==0.26.0
+pandas==2.2.1
+neo4j==5.15.0 
